# c4f

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  auto-commit  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-results.xml  test_g4f_login_issue.py  test_updated_config.py  upload.bat  x.py
.github/workflows/: create-demo.yml  publish.yml  tests.yml  update-g4f.yml
auto_commit/: __init__.py  cli.py  main.py
c4f/: __init__.py  _purifier.py  base.py  cli.py  config.py  main.py  ssl_utils.py  utils.py
c4f/processor/: __init__.py  base.py  batch_processor.py  parallel_processor.py  processor_factory.py  processor_queue.py  sequential_processor.py
docs/: github-actions.md
examples/: README.md  __init__.py  progressbar_demo.py
scripts/: build_installer.py  test_ssl_workaround.py
scripts/release/: build_installer.py  update_version.py
scripts/utils/: styles.py
tests/: __init__.py  conftest.py  test_all.py  test_cli.py  test_commit_generation.py  test_config.py  test_core.py  test_git_operations.py  test_icons_feature.py  test_ssl_workaround.py  test_subprocess.py
tests/har_and_cookies/: blackbox.json
